Fix grid table overflow issue

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import "./variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import './variables.scss';
 
 * {
   margin: 0;
@@ -13,7 +13,7 @@ a {
 }
 
 .main {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   background-color: $main-bg;
   color: $text-color;
 }
@@ -23,13 +23,13 @@ a {
 }
 
 .menu-container {
-  flex: 1;
+  width: 220px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
 }
 
 .content-container {
-  flex: 8;
+  flex: 1;
   padding: 5px 20px;
 }
 
